[package]
name = "roc_editor"
version = "0.1.0"
authors = ["The Roc Contributors"]
license = "UPL-1.0"
edition = "2018"
description = "An editor for Roc"

[dependencies]
roc_ast = { path = "../ast" }
roc_collections = { path = "../compiler/collections" }
roc_load = { path = "../compiler/load" }
roc_builtins = { path = "../compiler/builtins" }
roc_can = { path = "../compiler/can" }
roc_code_markup = { path = "../code_markup"}
roc_parse = { path = "../compiler/parse" }
roc_region = { path = "../compiler/region" }
roc_module = { path = "../compiler/module" }
roc_problem = { path = "../compiler/problem" }
roc_types = { path = "../compiler/types" }
roc_unify = { path = "../compiler/unify" }
roc_reporting = { path = "../compiler/reporting" }
roc_solve = { path = "../compiler/solve" }
ven_graph = { path = "../vendor/pathfinding" }
im = "15" # im and im-rc should always have the same version!
im-rc = "15" # im and im-rc should always have the same version!
bumpalo = { version = "3.6.1", features = ["collections"] }
arraystring = "0.3.0"
libc = "0.2"
page_size = "0.4"
winit = "0.24"
wgpu = "0.10"
glyph_brush = "0.7"
log = "0.4"
zerocopy = "0.3"
env_logger = "0.8"
futures = "0.3"
wgpu_glyph = "0.14"
cgmath = "0.18.0"
snafu = { version = "0.6", features = ["backtraces"] }
colored = "2"
pest = "2.1"
pest_derive = "2.1"
ropey = "1.2.0"
copypasta = "0.7.1"
palette = "0.5"
# confy is currently unused but should not be removed
confy = { git = 'https://github.com/rust-cli/confy', features = [
  "yaml_conf"
], default-features = false }
serde = { version = "1.0.123", features = ["derive"] }
nonempty = "0.6.0"
fs_extra = "1.2.0"
rodio = "0.14.0"
threadpool = "1.8.1"

[dependencies.bytemuck]
version = "1.4"
features = ["derive"]

[dev-dependencies]
pretty_assertions = "0.6"
maplit = "1.0.1"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8.2"
indoc = "1.0"
tempfile = "3.2.0"
uuid = { version = "0.8", features = ["v4"] }
