[package]
name = "roc_editor"
version = "0.1.0"
authors = ["The Roc Contributors"]
license = "UPL-1.0"
edition = "2018"
description = "An editor for Roc"

[package.metadata.cargo-udeps.ignore]
# confy is currently unused but should not be removed
normal = ["confy"]
#development = []
#build = []

[dependencies]
roc_ast = { path = "../ast" }
roc_collections = { path = "../compiler/collections" }
roc_load = { path = "../compiler/load" }
roc_builtins = { path = "../compiler/builtins" }
roc_can = { path = "../compiler/can" }
roc_code_markup = { path = "../code_markup"}
roc_parse = { path = "../compiler/parse" }
roc_region = { path = "../compiler/region" }
roc_module = { path = "../compiler/module" }
roc_problem = { path = "../compiler/problem" }
roc_types = { path = "../compiler/types" }
roc_unify = { path = "../compiler/unify" }
roc_reporting = { path = "../compiler/reporting" }
roc_solve = { path = "../compiler/solve" }
ven_graph = { path = "../vendor/pathfinding" }
im = "15" # im and im-rc should always have the same version!
im-rc = "15" # im and im-rc should always have the same version!
bumpalo = { version = "3.6.1", features = ["collections"] }
arraystring = "0.3.0"
libc = "0.2"
page_size = "0.4"
winit = "0.25"
wgpu = "0.11"
wgpu_glyph = "0.15"
glyph_brush = "0.7"
log = "0.4"
env_logger = "0.9"
futures = "0.3"
cgmath = "0.18.0"
snafu = { version = "0.6", features = ["backtraces"] }
colored = "2"
pest = "2.1"
pest_derive = "2.1"
copypasta = "0.7.1"
# TODO: look into upgrading to 0.6.
# Runs into issues converting HSV to LinSrgb.
palette = "0.5"
confy = { git = 'https://github.com/rust-cli/confy', features = [
  "yaml_conf"
], default-features = false }
serde = { version = "1.0.123", features = ["derive"] }
nonempty = "0.7"
fs_extra = "1.2.0"
rodio = "0.14.0"
threadpool = "1.8.1"

[dependencies.bytemuck]
version = "1.4"
features = ["derive"]

[dev-dependencies]
rand = "0.8.2"
tempfile = "3.2.0"
uuid = { version = "0.8", features = ["v4"] }
