[package]
name = "roc-gui"
version = "0.1.0"
authors = ["Richard Feldman <richard.t.feldman@gmail.com>"]
repository = "https://github.com/rtfeldman/roc"
readme = "README.md"
keywords = ["roc", "gui"]
edition = "2018"
description = "A GUI for Roc"
license = "Apache-2.0"

[dependencies]
winit = "0.19.1"
