[package]
name = "roc-gui"
version = "0.1.0"
authors = ["Richard Feldman <richard.t.feldman@gmail.com>"]
repository = "https://github.com/rtfeldman/roc"
readme = "README.md"
keywords = ["roc", "gui"]
edition = "2018"
description = "A GUI for Roc"
license = "Apache-2.0"


[features]
default = ["gfx-backend-vulkan"]
metal = ["gfx-backend-metal"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
winit = "0.19.1"
log = "0.4.6"
simple_logger = "1.2.0"
gfx-hal = "0.2"
arrayvec = "0.4.10"

[dependencies.gfx-backend-vulkan]
version = "0.2.0"
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.2.0"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.2.0"
optional = true
