[package]
name = "roc_linker"
version = "0.1.0"
authors = ["The Roc Contributors"]
license = "UPL-1.0"
repository = "https://github.com/rtfeldman/roc"
edition = "2018"
description = "A surgical linker for Roc"

[lib]
name = "roc_linker"
path = "src/lib.rs"

[[bin]]
name = "link"
path = "src/main.rs"
test = false
bench = false

[dependencies]
roc_mono = { path = "../compiler/mono" }
roc_build = { path = "../compiler/build", default-features = false }
roc_collections = { path = "../compiler/collections" }
bumpalo = { version = "3.6", features = ["collections"] }
clap = "= 3.0.0-beta.5"
iced-x86 = { version = "1.14", default-features = false, features = ["std", "decoder", "op_code_info", "instr_info"]}
memmap2 = "0.5"
object = { version = "0.26", features = ["read", "write"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
target-lexicon = "0.12.2"
tempfile = "3.1.0"
