[package]
name = "nightly_benches"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]

[dev-dependencies]
cli_test_utils.workspace = true
criterion-perf-events.workspace = true
criterion.workspace = true
perfcnt.workspace = true

[[bench]]
name = "events_bench"
harness = false
