[package]
edition = "2021"
name = "repl_test"
version = "0.1.0"

[build-dependencies]
roc_cli = {path = "../cli"}

[dependencies]
lazy_static = "1.4.0"

[dev-dependencies]
indoc = "1.0.3"
strip-ansi-escapes = "0.1.1"

roc_repl_cli = {path = "../repl_cli"}
roc_test_utils = {path = "../test_utils"}

[features]
wasm = []
