[package]
authors = ["The Roc Contributors"]
description = "Rust representations of Roc data structures"
edition = "2018"
license = "UPL-1.0"
name = "roc_std"
readme = "README.md"
repository = "https://github.com/rtfeldman/roc"
version = "0.1.0"

[dev-dependencies]
indoc = "1.0.3"
pretty_assertions = "1.0.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
libc = "0.2"
