[package]
authors = ["The Roc Contributors"]
description = "Rust representations of Roc data structures"
edition = "2021"
license = "UPL-1.0"
name = "roc_std"
readme = "README.md"
repository = "https://github.com/rtfeldman/roc"
version = "0.1.0"

[dependencies]
static_assertions = "0.1"
libc = { version = "0.2.106", optional = true }

[dev-dependencies]
indoc = "1.0.3"
pretty_assertions = "1.0.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[features]
default = ["platform", "std"]
platform = []
no_std = []
std = ["libc"]
