[package]
name = "roc_collections"
version = "0.1.0"
authors = ["The Roc Contributors"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
im    = "14" # im and im-rc should always have the same version!
im-rc = "14" # im and im-rc should always have the same version!
wyhash = "0.3"
bumpalo = { version = "3.6.1", features = ["collections"] }
hashbrown = { version = "0.11.2", features = [ "bumpalo" ] }
