[package]
name = "roc_gen_wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roc_collections = { path = "../collections" }
roc_module = { path = "../module" }
roc_mono = { path = "../mono" }
bumpalo = { version = "3.8.0", features = ["collections"] }

roc_std = { path = "../../roc_std" }

[dev-dependencies]
roc_can = { path = "../can" }
roc_builtins = { path = "../builtins" }
roc_types = { path = "../types" }
roc_module = { path = "../module" }
target-lexicon = "0.12.2"
